--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <div class="cta-buttons">
         <a href="{{ url_for('client_portal') }}" class="btn btn-primary">Portail Client</a>
         <a href="{{ url_for('admin_dashboard') }}" class="btn btn-secondary">Administration</a>
-        <a href="{{ url_for('employee_section') }}" class="btn btn-tertiary">Espace Employés</a>
+        <a href="{{ url_for('employe_section') }}" class="btn btn-tertiary">Espace Employés</a>
     </div>
 </div>
 
